<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FirstFragment">

    <Button
        android:id="@+id/btn_0"
        android:layout_width="@dimen/square_length"
        android:layout_height="@dimen/square_length"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:onClick="playerTap"
        android:text=""
        android:tag="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_3"
        android:layout_width="@dimen/square_length"
        android:layout_height="@dimen/square_length"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:onClick="playerTap"
        android:tag="3"
        android:text=""
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_0" />

    <Button
        android:id="@+id/btn_7"
        android:layout_width="@dimen/square_length"
        android:layout_height="@dimen/square_length"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:onClick="playerTap"
        android:tag="7"
        android:text=""
        app:layout_constraintStart_toEndOf="@+id/btn_6"
        app:layout_constraintTop_toBottomOf="@+id/btn_4" />

    <Button
        android:id="@+id/btn_8"
        android:layout_width="@dimen/square_length"
        android:layout_height="@dimen/square_length"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:onClick="playerTap"
        android:tag="8"
        android:text=""
        app:layout_constraintStart_toEndOf="@+id/btn_7"
        app:layout_constraintTop_toBottomOf="@+id/btn_5" />

    <Button
        android:id="@+id/btn_5"
        android:layout_width="@dimen/square_length"
        android:layout_height="@dimen/square_length"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:onClick="playerTap"
        android:tag="5"
        android:text=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.647"
        app:layout_constraintStart_toEndOf="@+id/btn_4"
        app:layout_constraintTop_toBottomOf="@+id/btn_2" />

    <Button
        android:id="@+id/btn_6"
        android:layout_width="@dimen/square_length"
        android:layout_height="@dimen/square_length"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:onClick="playerTap"
        android:tag="6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_3" />

    <Button
        android:id="@+id/btn_4"
        android:layout_width="@dimen/square_length"
        android:layout_height="@dimen/square_length"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:onClick="playerTap"
        android:tag="4"
        android:text=""
        app:layout_constraintStart_toEndOf="@+id/btn_3"
        app:layout_constraintTop_toBottomOf="@+id/btn_1" />

    <Button
        android:id="@+id/btn_1"
        android:layout_width="@dimen/square_length"
        android:layout_height="@dimen/square_length"
        android:layout_marginStart="24dp"
        android:onClick="playerTap"
        android:tag="1"
        android:text=""
        app:layout_constraintBaseline_toBaselineOf="@+id/btn_0"
        app:layout_constraintStart_toEndOf="@+id/btn_0" />

    <Button
        android:id="@+id/btn_2"
        android:layout_width="@dimen/square_length"
        android:layout_height="@dimen/square_length"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:onClick="playerTap"
        android:tag="2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_1"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/status_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:textSize="@dimen/result_text_size"
        android:text=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_7" />

    <Button
        android:id="@+id/btn_new_game"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:text="@string/new_game_text"
        android:onClick="gameReset"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/status_text" />
</androidx.constraintlayout.widget.ConstraintLayout>