<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_new_game"
        android:title="@string/new_game_text"
        android:icon="@drawable/ic_new_game_dark_mode"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_settings"
        android:title="@string/settings_title"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_single_mode"
        android:title="@string/initial_game_mode"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_night_mode"
        android:icon="@drawable/ic_night_mode"
        android:title="@string/toggle_mode"
        app:showAsAction="always" />
</menu>